--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ mongoengine==0.8.7
 pymongo==2.8
 pytz==2015.4
 rapidpro-python==1.1
+raven==5.7.2
 redis==2.10.3
 requests==2.7.0
 retrying==1.3.3
