--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,23 @@
-amqp==1.4.6
+amqp==1.4.9
 anyjson==0.3.3
-billiard==3.3.0.20
-celery==3.1.18
+billiard==3.3.0.23
+celery==3.1.24
 Django==1.8.3
 django-celery==3.1.16
 django-celery-transactions==0.3.2
 django-rest-framework-mongoengine==2.0.2
 django-rest-swagger==0.3.4
 djangorestframework==3.0.0
-fabric==1.11.1
-kombu==3.0.26
+ecdsa==0.13
+Fabric==1.11.1
+kombu==3.0.36
 Markdown==2.6.2
 mongoengine==0.8.7
+paramiko==1.17.1
 psycopg2==2.6.1
+pycrypto==2.6.1
 pymongo==2.8
-pytz==2015.4
+pytz==2016.7
 PyYAML==3.11
 rapidpro-python==1.1
 raven==5.7.2
@@ -22,4 +25,4 @@ redis==2.10.3
 requests==2.7.0
 retrying==1.3.3
 six==1.9.0
-wheel==0.24.0
+uuid==1.30
