--- a/requirements.txt
+++ b/requirements.txt
@@ -17,12 +17,13 @@ paramiko==1.17.1
 psycopg2==2.6.1
 pycrypto==2.6.1
 pymongo==2.8
-pytz==2016.7
+pytz==2017.2
 PyYAML==3.11
-rapidpro-python==1.1
+rapidpro-python==2.1.8
 raven==5.7.2
 redis==2.10.3
-requests==2.7.0
+requests==2.18.4
 retrying==1.3.3
-six==1.9.0
+six==1.11.0
 uuid==1.30
+urllib3==1.22
