--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,22 @@
-amqp==1.4.9
+amqp==2.2.2
 anyjson==0.3.3
-billiard==3.3.0.23
-celery==3.1.24
-Django==1.8.3
-django-celery==3.1.16
-django-celery-transactions==0.3.2
-django-rest-framework-mongoengine==2.0.2
+billiard==3.5.0.3
+celery==4.1.0
+Django==1.9.13
+django-celery-transactions==0.3.2  # todo: can this be removed?
+django-rest-framework-mongoengine==3.3.1
 django-rest-swagger==0.3.4
-djangorestframework==3.0.0
+djangorestframework==3.7.3
 ecdsa==0.13
 Fabric==1.11.1
-kombu==3.0.36
+kombu==4.1.0
 Markdown==2.6.2
 mongoengine==0.14.3
 paramiko==1.17.1
 psycopg2==2.6.1
 pycrypto==2.6.1
 pymongo==3.5.1
-pytz==2017.2
+pytz==2017.3
 PyYAML==3.11
 rapidpro-python==2.1.8
 raven==5.7.2
