--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ amqp==2.2.2
 anyjson==0.3.3
 billiard==3.5.0.3
 celery==4.1.0
+celery[redis]
 Django==1.9.13
 django-rest-framework-mongoengine==3.3.1
 django-rest-swagger==0.3.4
@@ -19,7 +20,6 @@ pytz==2017.3
 PyYAML==3.11
 rapidpro-python==2.2
 raven==5.7.2
-redis==2.10.3
 requests==2.18.4
 retrying==1.3.3
 six==1.11.0
