add file to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ db.sqlite3
 celerybeat-schedule
 data_api/settings.py
 data_api/localsettings.py
+data_api/settings_production.py
 # some profiling folders used locally
 profiling
 profile.py
