update rapirpro client

--- a/Pipfile
+++ b/Pipfile
@@ -22,7 +22,7 @@ djangorestframework = "*"
 ecdsa = "*"
 gunicorn = "*"
 psycopg2 = "<2.8"
-rapidpro-python = "<=2.3"
+rapidpro-python = "*"
 redis = "*"
 requests = "*"
 retrying = "*"
