pipenv and django 2.11

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,4 +5,4 @@ include LICENSE
 include setup.py
 recursive-include data_api *.*
 recursive-exclude data_api *.pyc
-include requirements.txt
+include Pipfile.lock
