--- a/tox.ini
+++ b/tox.ini
@@ -3,4 +3,10 @@ envlist = py{27,37}
 
 [testenv]
 commands =
-        python manage.py test
+       python manage.py check
+;       python manage.py makemigrations --dry-run --check
+       flake8 src/
+       isort -rc src/ --check-only
+       python manage.py test
+
+extras=test
