--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,7 @@
 [tox]
 envlist = py{27,37}
-skipsdist = True
 
 [testenv]
-deps = -rrequirements.txt
 commands =
+        pip install -e .
         python manage.py test
