--- a/tox.ini
+++ b/tox.ini
@@ -9,4 +9,7 @@ commands =
        isort -rc src/ --check-only
        python manage.py test
 
+setenv =
+       DJANGO_SETTINGS_MODULE=data_api.settings_dev
+
 extras=test
