--- a/Pipfile
+++ b/Pipfile
@@ -21,7 +21,7 @@ django-rest-swagger = "*"
 djangorestframework = "<3.7"
 ecdsa = "*"
 gunicorn = "*"
-psycopg2 = "*"
+psycopg2 = "<2.8"
 rapidpro-python = "<=2.3"
 redis = "*"
 requests = "*"
