--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ commands =
        python manage.py check
 ;       python manage.py makemigrations --dry-run --check
        flake8 src/
-       isort -rc src/ --check-only
+       isort -rc data_api/ --check-only
        python manage.py test
 
 setenv =
